@@ -3867,15 +3867,21 @@ def dep_check(depstring,mydbapi,mysettings,use="yes",mode=None,myuse=None,use_ca
 	mysplit = portage_dep.paren_reduce(depstring)
 
 	if mysettings:
-		if use=="all":
-			mymasks=archlist[:]
-		else:
-			mymasks=mysettings.usemask+archlist[:]
+		# XXX: use="all" is only used by repoman. Why would repoman checks want
+		# profile-masked USE flags to be enabled?
+		#if use=="all":
+		#	mymasks=archlist[:]
+		#else:
+		mymasks=mysettings.usemask+archlist[:]
+
 		while mysettings["ARCH"] in mymasks:
 			del mymasks[mymasks.index(mysettings["ARCH"])]
 		mysplit = portage_dep.use_reduce(mysplit,myusesplit,masklist=mymasks,matchall=(use=="all"))
 	else:
 		mysplit = portage_dep.use_reduce(mysplit,myusesplit,matchall=(use=="all"))
+	
+	# Do the || conversions
+	mysplit=portage_dep.dep_opconvert(mysplit)
 	
 	#convert virtual dependencies to normal packages.
 	mysplit=dep_virtual(mysplit)
